# HarmonyAndroidNative

./: .gitignore  CMakeLists.txt  README.md
cmake/: Android.cmake  HarmonyOS.cmake  Install.cmake  Linux.cmake  Local-sample.cmake  Local.cmake  MacOS.cmake  Windows-sample.cmake  Windows.cmake  ZNativeConfig.cmake
libs/android/: download_opencv.sh
libs/common/cppfs-1.2.0/: CMakeLists.txt
libs/common/cppfs-1.2.0/cmake/: CompileOptions.cmake
libs/common/cppfs-1.2.0/source/: CMakeLists.txt
libs/common/eventpp-0.1.3/: CMakeLists.txt
libs/common/libhv-1.3.3/: CMakeLists.txt
libs/common/libyuv-stable/source/: convert_from_argb.cc
libs/local/win32/: BUILD_OPENCV.md
libs/local/win32/directshow_camera/: CMakeLists.txt
libs/local/win32/directshow_camera/src/directshow_camera/src/camera/: camera.cpp  camera.h
libs/local/win32/directshow_camera/src/directshow_camera/src/directshow_camera/camera/: abstract_ds_camera.h  ds_camera.h
libs/local/win32/directshow_camera/src/directshow_camera/src/directshow_camera/device/: ds_camera_device.cpp  ds_camera_device.h
libs/local/win32/directshow_camera/src/directshow_camera/src/directshow_camera/grabber/: ds_grabber_callback.h
libs/local/win32/directshow_camera/src/directshow_camera/src/directshow_camera/stub/: ds_camera_stub.cpp  ds_camera_stub.h  ds_camera_stub_default.h
libs/local/win32/directshow_camera/src/directshow_camera/src/directshow_camera/utils/: win32_utils.cpp  win32_utils.h
libs/local/win32/directshow_camera/src/directshow_camera/src/directshow_camera/video_format/: ds_video_format.cpp  ds_video_format.h
libs/local/win32/directshow_camera/src/directshow_camera/src/frame/: frame.cpp  frame.h
libs/local/win32/glew-2.1.0/: CMakeLists.txt  glew.pc
libs/local/win32/win-dshow/: CMakeLists.txt
libs/win32/directshow_camera/: CMakeLists.txt
libs/win32/glew-2.1.0/: CMakeLists.txt  glew-config.cmake  glew.pc
libs/win32/libdshowcapture/: CMakeLists.txt
samples/local/: IWindow.h  Local-sample.cmake  MainApp.h  MainWindow.cpp  MainWindow.h  Windows-sample.cmake  main.cpp
samples/local/gl/: GLMain.cpp  GLRenderer.cpp  GLRenderer.h  GLTestWindow.cpp  GLTestWindow.h
samples/local/src/: MainApp.cpp  MainApp.h  MainWindow.cpp  main.cpp
samples/local/src/gl/: GLTestWindow.h
samples/local/src/net/: NetTestWindow.cpp  NetTestWindow.h
samples/local/src/test/: ZTest.h
samples/local/src/usb/: AOAProtocol.cpp  AOAProtocol.h  LibusbAsyncTransfer.cpp  LibusbAsyncTransfer.h  LibusbDevice.cpp  LibusbDevice.h  LibusbDeviceTransfer.cpp  LibusbDeviceTransfer.h  LibusbMgr.cpp  LibusbMgr.h  LibusbUtils.h  LibusbWindow.cpp  LibusbWindow.h
samples/local/src/win32/: WinCamTestWindow.cpp  WinCamTestWindow.h
samples/local/test/: TestZImage.cpp  ZTest.h
samples/local/win32/: WinCamMgr.cpp  WinCamMgr.h  WinCamTestWindow.cpp  WinCamTestWindow.h
src/: Namespace.h  ZNative.cpp  ZNative.h
src/android/: AppContext.cpp  AppContext.h
src/android/cam/: CamCharacteristics.cpp  CamCharacteristics.h  CamDevice.cpp  CamDevice.h  CamManager.cpp  CamManager.h  CamUtils.cpp  CamUtils.h  CaptureRequest.cpp  CaptureRequest.h  CaptureSession.cpp  CaptureSession.h
src/android/image/: IRImage.h  ImageReader.cpp  ImageReader.h
src/android/surface/: NativeWindow.cpp  NativeWindow.h
src/android/utils/: AssetsMgr.cpp  AssetsMgr.h  AssetsMgrAndroid.h  JNIUtils.cpp  JNIUtils.h
src/common/: AppContext.h  Common.cpp  Common.h  Log.h  Object.h
src/common/egl/: EGLCtx.cpp  EGLCtx.h  GLEngine.cpp  GLEngine.h
src/common/gles/: EGLCtx.cpp  EGLCtx.h  Framebuffer.h  FramebufferPool.h  GLCoord.h  GLEngine.cpp  GLEngine.h  GLFenceSyncer.h  GLReader.h  GLUtil.cpp  GLUtil.h  Program.h  ShareFramebuffer.h  Texture.h  Viewport.h
src/common/gles/filter/: BaseFilter.h  ColorAdjustFilter.h  NV12Filter.h  NV21Filter.h  SharpenFilter.h  TextureFilter.h  YUVFilter.h
src/common/media/: ZMedia.cpp
src/common/media/img/: ZImage.h
src/common/net/: TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h  WebSocket.h
src/common/utils/: Array.h  AssetsMgr.h  Base.h  BaseUtils.h  CallbackMgr.h  EventThread.h  EventppWrap.h  FileUtils.cpp  FileUtils.h  MathUtils.h  RawData.h  ThreadPool.h  TimeUtils.h  YuvUtils.cpp  YuvUtils.h
src/harmony/: AppContext.cpp  AppContext.h  Harmony.cpp
src/harmony/cam/: CamDevice.cpp  CamDevice.h  CamInput.cpp  CamInput.h  CamManager.cpp  CamManager.h  CamUtils.cpp  CamUtils.h  CaptureSession.cpp  CaptureSession.h  MetadataOutput.cpp  MetadataOutput.h  PhotoOutput.cpp  PhotoOutput.h  PreviewOutput.cpp  PreviewOutput.h  VideoOutput.cpp  VideoOutput.h
src/harmony/hiai/: HiAI.cpp  HiAI.h  NNExecutor.h  NNTensor.h
src/harmony/image/: ImageUtils.h  MDKImage.h  MDKImageReader.cpp  MDKImageReader.h  NIRImage.h  NImagePacker.h  NImageSource.h  NNativeBuffer.h  NNativeWindow.h  NPixelmap.h  NativeImageReader.cpp  NativeImageReader.h
src/harmony/masset/: MAssetUtils.h  MediaAsset.h  MediaAssetMgr.cpp  MediaAssetMgr.h
src/harmony/media/: AVBuffer.h  AVCapability.h  AVFormat.h  AVSource.h  AVUtils.h  Demuxer.h  Muxer.h
src/harmony/media/audio/: AudioEncoder.cpp  AudioEncoder.h  AudioUtils.h
src/harmony/media/ext/: VideoSplicing.h
src/harmony/media/record/: Mp4RecAudioTrack.h  Mp4RecSurfVideoTrack.h  Mp4Recorder.h  RecordConfig.h
src/harmony/media/video/: VSurfaceEncoder.h  (+2 more)
src/harmony/mslite/: AIContext.h  AIModel.h  AITensor.h  AIUtils.h  MSLitePredictor.cpp  MSLitePredictor.h  MindSporeLite.cpp  MindSporeLite.h
src/harmony/sensor/: SensorAccelerometer.cpp  SensorAccelerometer.h  SensorGravity.cpp  SensorGravity.h  SensorMgr.cpp  SensorMgr.h
src/harmony/utils/: AssetsMgr.cpp  AssetsMgr.h  AssetsMgrHarmony.h  DeviceInfo.h  NapiUtils.cpp  NapiUtils.h
src/harmony/xcomp/: XCompGLBinder.cpp  XCompGLBinder.h  XComponent.cpp  XComponent.h
src/local/: AppContext.cpp
src/local/linux/: AppContext.cpp
src/local/macos/: AppContext.cpp
src/local/win32/: AppContext.cpp  WinUtils.h
src/win32/cam/: CamDevice.cpp  CamDevice.h  CamUtils.h
src/win32/dshow/: DSCaptureMgr.cpp  DSUtils.h  DeviceEnumerator.h
(+29 files in other folders)
